training + teacher forcing

--- a/effective_approaches.ipynb
+++ b/effective_approaches.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +115,10 @@
     "        decoder_context = torch.zeros(num_sentences, hidden_dim).cuda()\n",
     "        pred = []\n",
     "        \n",
+    "        if input is not None:\n",
+    "            max_sen_len = input.shape[1]\n",
+    "            teacher_words = input.t()\n",
+    "        \n",
     "        for i in range(max_sen_len):\n",
     "            embeddings = self.embedding(words_selected)\n",
     "            h_t, (h, c) = self.decoder(embeddings, (h, c))\n",
@@ -128,19 +132,19 @@
     "            pred.append(pred_t)\n",
     "            decoder_context = self.attention(source_h, h[-1])\n",
     "            \n",
-    "            if input == None:\n",
+    "            if input is None:\n",
     "                words_selected = torch.max(pred_t, dim=1)[1].unsqueeze(1)\n",
     "            else:\n",
-    "                raise NotImplementedError\n",
+    "                words_selected = teacher_words[i].unsqueeze(1)\n",
     "\n",
     "\n",
     "        pred = torch.stack(pred, dim=1)\n",
-    "        return torch.log_softmax(pred, dim=-1)"
+    "        return torch.log_softmax(pred, dim=-1), None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +169,13 @@
     "s = Seq2Seq_EffectiveApproaches(10, 12, 9, 8, Attention=Attention_Concat)\n",
     "s.cuda()\n",
     "input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))\n",
-    "s(input).shape\n",
+    "target = torch.cuda.LongTensor(np.random.randint(0, 12, (3, 10)))\n",
+    "\n",
+    "# without teacher forcing\n",
+    "s(input)\n",
+    "\n",
+    "# with teacher forcing\n",
+    "s(input, target)\n",
     "```"
    ]
   }
