coverage + attention mask

--- a/effective_approaches.ipynb
+++ b/effective_approaches.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "        super().__init__()\n",
     "        self.bilinear = nn.Bilinear(dim, dim, 1)\n",
     "        \n",
-    "    def forward(self, source_h, target_h):\n",
+    "    def forward(self, source_h, target_h, source_mask=None):\n",
     "        '''\n",
     "        # TODO: repeat copies data, use expand\n",
     "        \n",
@@ -31,14 +31,18 @@
     "        target_h = target_h.repeat(1, num_words).reshape(num_words * num_sentences, -1)\n",
     "        raw_weights = self.bilinear(target_h, source_h.reshape(num_words * num_sentences, \n",
     "                                                               -1)).reshape(num_sentences, num_words)\n",
+    "        \n",
+    "        if source_mask is not None:\n",
+    "            raw_weights = source_mask * raw_weights\n",
+    "\n",
     "        weights = torch.softmax(f.relu(raw_weights), dim=1)\n",
     "        \n",
-    "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1)"
+    "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1), weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,18 +50,21 @@
     "    def __init__(self, _):\n",
     "        super().__init__()\n",
     "        \n",
-    "    def forward(self, source_h, target_h):\n",
+    "    def forward(self, source_h, target_h, source_mask=None):\n",
     "        num_sentences, num_words = source_h.shape[:-1]\n",
     "        target_h = target_h.repeat(1, num_words).reshape(num_words * num_sentences, -1)\n",
     "        raw_weights = torch.sum(target_h * source_h.reshape(num_words * num_sentences, -1), dim=1).reshape(num_sentences, num_words)\n",
     "        \n",
+    "        if source_mask is not None:\n",
+    "            raw_weights = source_mask * raw_weights\n",
+    "            \n",
     "        weights = torch.softmax(f.relu(raw_weights), dim=1)\n",
-    "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1)"
+    "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1), weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,15 +73,18 @@
     "        super().__init__()\n",
     "        self.w = nn.Linear(hidden_dim*2, 1)\n",
     "        \n",
-    "    def forward(self, source_h, target_h):\n",
+    "    def forward(self, source_h, target_h, source_mask=None):\n",
     "        num_sentences, num_words = source_h.shape[:-1]\n",
     "        target_h = target_h.repeat(1, num_words).reshape(num_words * num_sentences, -1)\n",
     "        \n",
     "        input = torch.cat((target_h, source_h.reshape(num_words * num_sentences, -1)), dim=1)\n",
     "        raw_weights = self.w(input).reshape(num_sentences, num_words)\n",
     "        \n",
+    "        if source_mask is not None:\n",
+    "            raw_weights = source_mask * raw_weights\n",
+    "            \n",
     "        weights = torch.softmax(f.relu(raw_weights), dim=1)\n",
-    "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1)"
+    "        return torch.sum(weights.unsqueeze(-1) * source_h, dim=1), weights"
    ]
   },
   {
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +116,7 @@
     "        \n",
     "        self.attention = Attention(hidden_dim)\n",
     "        \n",
-    "    def forward(self, output, h, c, input=None, max_sen_len=20):\n",
+    "    def forward(self, output, h, c, input=None, max_sen_len=20, source_mask=None):\n",
     "        \n",
     "        source_h = output\n",
     "        num_sentences, num_words, hidden_dim = output.shape\n",
@@ -124,7 +134,7 @@
     "            h_t, (h, c) = self.decoder(embeddings, (h, c))\n",
     "            orig_shape = h_t.shape\n",
     "            \n",
-    "            ct = self.attention(source_h, h[-1])\n",
+    "            ct, _ = self.attention(source_h, h[-1], source_mask)\n",
     "            h_t_ = torch.cat((ct, h[-1]), dim=1)\n",
     "            \n",
     "            pred_t = self.word_predictor(h_t_.reshape(orig_shape[0]*orig_shape[1], \n",
@@ -144,21 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Seq2Seq_EffectiveApproaches(nn.Module):\n",
-    "    def __init__(self, source_vocab_len, target_vocab_len, embedding_dim, hidden_dim,\n",
-    "                       start_dim=1, padding_dim=0, num_layers=1, Attention=Attention_General):\n",
+    "    def __init__(self, source_vocab_len, target_vocab_len, embedding_dim, hidden_dim, num_layers=2,\n",
+    "                       padding_dim_source=0, start_dim_target=1, padding_dim_target=0, Attention=Attention_General):\n",
     "        super().__init__()\n",
-    "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim)\n",
+    "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_source)\n",
     "        self.decoder = DecoderEffective(target_vocab_len, embedding_dim, hidden_dim, num_layers, \n",
-    "                                        padding_dim, start_dim, Attention=Attention)\n",
+    "                                        padding_dim_target, start_dim_target, Attention=Attention)\n",
     "        \n",
-    "    def forward(self, source_input, target_input=None):\n",
+    "    def forward(self, source_input, target_input=None, source_mask=None):\n",
     "        output, h, c = self.encoder(source_input)\n",
-    "        return self.decoder(output, h, c, target_input)"
+    "        return self.decoder(output, h, c, target_input, source_mask=source_mask)"
    ]
   },
   {
