--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,22 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seq2Seq(\n",
+      "Seq2SeqWithAttention(\n",
       "  (encoder): Encoder(\n",
       "    (embedding): Embedding(32072, 50, padding_idx=32071)\n",
       "    (encoder): LSTM(50, 100, num_layers=2, batch_first=True)\n",
       "  )\n",
-      "  (decoder): Decoder(\n",
+      "  (decoder): DecoderAttention(\n",
       "    (embedding): Embedding(89258, 50, padding_idx=89257)\n",
-      "    (decoder): LSTM(50, 100, num_layers=2, batch_first=True)\n",
+      "    (decoder): LSTM(150, 100, num_layers=2, batch_first=True)\n",
       "    (word_predictor): Linear(in_features=100, out_features=89258, bias=True)\n",
+      "    (attention): Attention(\n",
+      "      (layer1): Linear(in_features=200, out_features=100, bias=True)\n",
+      "      (layer2): Linear(in_features=100, out_features=1, bias=True)\n",
+      "    )\n",
       "  )\n",
       ")\n"
      ]
