--- a/utils.ipynb
+++ b/utils.ipynb
@@ -209,19 +209,21 @@
     "                                                   torch.cuda.LongTensor(target_input), \n",
     "                                                   torch.cuda.LongTensor(target_output)]\n",
     "            \n",
+    "            source_mask = torch.ones(source.shape).cuda()\n",
+    "            source_mask[source == dataset.source_pad] = 0\n",
+    "            \n",
     "            if use_teacher_forcing:\n",
-    "                pred, _ = model(source, target_input)\n",
+    "                pred, attn_weights = model(source, target_input, source_mask=source_mask)\n",
     "                # mask whatevers after <stop> \n",
-    "                mask = torch.ones(target_output.shape).cuda()\n",
-    "                mask[target_output == dataset.target_pad] = 0\n",
-    "                pred = pred * mask.unsqueeze(-1)\n",
-    "                target_output = target_output * mask.long()\n",
+    "                target_mask = torch.ones(target_output.shape).cuda()\n",
+    "                target_mask[target_output == dataset.target_pad] = 0\n",
+    "                pred = pred * target_mask.unsqueeze(-1)\n",
+    "                target_output = target_output * target_mask.long()\n",
     "            else:\n",
-    "                pred, _ = model(source)\n",
-    "\n",
+    "                pred, attn_weights = model(source)\n",
     "\n",
     "            if attention_error:\n",
-    "                raise NotImplementedError\n",
+    "                attn_weights\n",
     "\n",
     "            no_words = pred.shape[0] * pred.shape[1]\n",
     "            pred = pred.reshape(no_words, -1)\n",
@@ -264,7 +266,7 @@
     "        target = dataset.convert_indices_to_words([target])\n",
     "        if log:\n",
     "            print(target, predicted_target[0])\n",
-    "        scores.append(sentence_bleu(target, predicted_target[0]), weights=(1, 0, 0, 0))\n",
+    "        scores.append(sentence_bleu(target, predicted_target[0], weights=(1, 0, 0, 0)))\n",
     "    return sum(scores)/len(scores)"
    ]
   }
