--- a/coverage.ipynb
+++ b/coverage.ipynb
@@ -11,11 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Decoder_LinguisticCoverage(nn.Module):\n",
+    "class Decoder_Coverage(nn.Module):\n",
+    "\n",
     "    def __init__(self, num_embeddings, embedding_dim, hidden_dim, num_layers, \n",
     "                 padding_dim=0, start_dim=1, Attention=Attention_General):\n",
     "        \n",
@@ -25,7 +26,8 @@
     "        self.word_predictor = nn.Linear(hidden_dim * 2, num_embeddings)\n",
     "        self.start_dim = start_dim\n",
     "        \n",
-    "        self.attention = Attention(hidden_dim)\n",
+    "        self.attention = Attention(hidden_dim)        \n",
+    "        self.fertility = nn.Linear(hidden_dim, 1)\n",
     "        \n",
     "    def forward(self, output, h, c, input=None, max_sen_len=20):\n",
     "        \n",
@@ -33,6 +35,8 @@
     "        num_sentences, num_words, hidden_dim = output.shape\n",
     "        words_selected = torch.cuda.LongTensor([[self.start_dim] for _ in range(num_sentences)])\n",
     "\n",
+    "        source_h_importance = self.fertility(source_h.reshape(num_sentences * num_words, -1)).reshape(num_sentences, num_words)\n",
+    "        \n",
     "        decoder_context = torch.zeros(num_sentences, hidden_dim).cuda()\n",
     "        pred = []\n",
     "        attention_weights = []\n",
@@ -64,12 +68,12 @@
     "        pred = torch.stack(pred, dim=1)\n",
     "        attention_weights = torch.stack(attention_weights, dim=-1)\n",
     "        \n",
-    "        return torch.log_softmax(pred, dim=-1), attention_weights"
+    "        return torch.log_softmax(pred, dim=-1), (attention_weights, source_h_importance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +82,7 @@
     "                       padding_dim_source=0, start_dim_target=1, padding_dim_target=0, Attention=Attention_General):\n",
     "        super().__init__()\n",
     "        self.encoder = Encoder(source_vocab_len, embedding_dim, hidden_dim, num_layers, padding_dim_source)\n",
-    "        self.decoder = Decoder_LinguisticCoverage(target_vocab_len, embedding_dim, hidden_dim, num_layers, \n",
+    "        self.decoder = Decoder_Coverage(target_vocab_len, embedding_dim, hidden_dim, num_layers, \n",
     "                                        padding_dim_target, start_dim_target, Attention=Attention)\n",
     "        \n",
     "    def forward(self, source_input, target_input=None, source_mask=None):\n",
@@ -106,16 +110,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([3, 6, 10])"
+       "(tensor([[[0.1659, 0.1659, 0.1659, 0.1659, 0.1659, 0.1659, 0.1659, 0.1659,\n",
+       "           0.1659, 0.1659],\n",
+       "          [0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665,\n",
+       "           0.1665, 0.1665],\n",
+       "          [0.1671, 0.1671, 0.1671, 0.1671, 0.1671, 0.1671, 0.1671, 0.1671,\n",
+       "           0.1671, 0.1671],\n",
+       "          [0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674,\n",
+       "           0.1674, 0.1674],\n",
+       "          [0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662,\n",
+       "           0.1662, 0.1662],\n",
+       "          [0.1670, 0.1670, 0.1670, 0.1670, 0.1670, 0.1670, 0.1670, 0.1670,\n",
+       "           0.1670, 0.1670]],\n",
+       " \n",
+       "         [[0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663,\n",
+       "           0.1663, 0.1663],\n",
+       "          [0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674,\n",
+       "           0.1674, 0.1674],\n",
+       "          [0.1655, 0.1655, 0.1655, 0.1655, 0.1655, 0.1655, 0.1655, 0.1655,\n",
+       "           0.1655, 0.1655],\n",
+       "          [0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663,\n",
+       "           0.1663, 0.1663],\n",
+       "          [0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1676,\n",
+       "           0.1676, 0.1676],\n",
+       "          [0.1669, 0.1669, 0.1669, 0.1669, 0.1669, 0.1669, 0.1669, 0.1669,\n",
+       "           0.1669, 0.1669]],\n",
+       " \n",
+       "         [[0.1644, 0.1644, 0.1644, 0.1644, 0.1644, 0.1644, 0.1644, 0.1644,\n",
+       "           0.1644, 0.1644],\n",
+       "          [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667,\n",
+       "           0.1667, 0.1667],\n",
+       "          [0.1666, 0.1666, 0.1666, 0.1666, 0.1666, 0.1666, 0.1666, 0.1666,\n",
+       "           0.1666, 0.1666],\n",
+       "          [0.1679, 0.1679, 0.1679, 0.1679, 0.1679, 0.1679, 0.1679, 0.1679,\n",
+       "           0.1679, 0.1679],\n",
+       "          [0.1678, 0.1678, 0.1678, 0.1678, 0.1678, 0.1678, 0.1678, 0.1678,\n",
+       "           0.1678, 0.1678],\n",
+       "          [0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665,\n",
+       "           0.1665, 0.1665]]], device='cuda:0', grad_fn=<StackBackward>),\n",
+       " tensor([[0.2386, 0.2453, 0.2349, 0.2483, 0.2402, 0.2359],\n",
+       "         [0.2547, 0.2537, 0.2412, 0.2421, 0.2405, 0.2473],\n",
+       "         [0.2366, 0.2459, 0.2416, 0.2497, 0.2540, 0.2670]], device='cuda:0',\n",
+       "        grad_fn=<AsStridedBackward>))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +175,7 @@
     "s(input)\n",
     "\n",
     "# with teacher forcing\n",
-    "s(input, target)[1].shape"
+    "s(input, target)[1]"
    ]
   },
   {
