--- a/utils.ipynb
+++ b/utils.ipynb
@@ -188,11 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, dataset, attention_error=False, iterations=1, use_teacher_forcing=True):\n",
+    "def train(model, dataset, coverage=False, coverage_type=\"linguistic\", iterations=1, use_teacher_forcing=True):\n",
     "    # TODO: attention error\n",
     "    loss = nn.NLLLoss()\n",
     "    optimizer = optim.Adagrad(model.parameters())\n",
@@ -213,7 +213,7 @@
     "            source_mask[source == dataset.source_pad] = 0\n",
     "            \n",
     "            if use_teacher_forcing:\n",
-    "                pred, attn_weights = model(source, target_input, source_mask=source_mask)\n",
+    "                pred, attn = model(source, target_input, source_mask=source_mask)\n",
     "                # mask whatevers after <stop> \n",
     "                target_mask = torch.ones(target_output.shape).cuda()\n",
     "                target_mask[target_output == dataset.target_pad] = 0\n",
@@ -222,8 +222,10 @@
     "            else:\n",
     "                pred, attn_weights = model(source)\n",
     "\n",
-    "            if attention_error:\n",
-    "                attn_weights\n",
+    "            if coverage:\n",
+    "                # if coverage type is linguistic, ignore fertility\n",
+    "                attn_weights, fertility = attn\n",
+    "                raise NotImplementedError\n",
     "\n",
     "            no_words = pred.shape[0] * pred.shape[1]\n",
     "            pred = pred.reshape(no_words, -1)\n",
