--- a/utils.ipynb
+++ b/utils.ipynb
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, dataset, coverage=False, coverage_type=\"linguistic\", iterations=1, use_teacher_forcing=True):\n",
+    "def train(model, dataset, coverage=False, coverage_type=\"linguistic\", iterations=1, use_teacher_forcing=True, log=True):\n",
     "    # TODO: attention error\n",
     "    loss = nn.NLLLoss()\n",
     "    optimizer = optim.Adagrad(model.parameters())\n",
@@ -235,7 +235,8 @@
     "            pred_error.backward()\n",
     "            optimizer.step()\n",
     "            \n",
-    "            print(d.current/d.batch_size, pred_error, end='\\r')"
+    "            if log:\n",
+    "                print(d.current/d.batch_size, pred_error, end='\\r')"
    ]
   },
   {
