--- a/coverage.ipynb
+++ b/coverage.ipynb
@@ -101,178 +101,12 @@
     "target = torch.cuda.LongTensor(np.random.randint(0, 12, (3, 10)))\n",
     "\n",
     "# without teacher forcing\n",
-    "s(input)\n",
+    "pred, (attn_weights, fertility) = s(input)\n",
     "\n",
     "# with teacher forcing\n",
-    "s(input, target)[1].shape\n",
+    "pred, (attn_weights, fertility) = s(input, target)\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[[0.1659, 0.1659, 0.1659, 0.1659, 0.1659, 0.1659, 0.1659, 0.1659,\n",
-       "           0.1659, 0.1659],\n",
-       "          [0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665,\n",
-       "           0.1665, 0.1665],\n",
-       "          [0.1671, 0.1671, 0.1671, 0.1671, 0.1671, 0.1671, 0.1671, 0.1671,\n",
-       "           0.1671, 0.1671],\n",
-       "          [0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674,\n",
-       "           0.1674, 0.1674],\n",
-       "          [0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662,\n",
-       "           0.1662, 0.1662],\n",
-       "          [0.1670, 0.1670, 0.1670, 0.1670, 0.1670, 0.1670, 0.1670, 0.1670,\n",
-       "           0.1670, 0.1670]],\n",
-       " \n",
-       "         [[0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663,\n",
-       "           0.1663, 0.1663],\n",
-       "          [0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674,\n",
-       "           0.1674, 0.1674],\n",
-       "          [0.1655, 0.1655, 0.1655, 0.1655, 0.1655, 0.1655, 0.1655, 0.1655,\n",
-       "           0.1655, 0.1655],\n",
-       "          [0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663, 0.1663,\n",
-       "           0.1663, 0.1663],\n",
-       "          [0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1676,\n",
-       "           0.1676, 0.1676],\n",
-       "          [0.1669, 0.1669, 0.1669, 0.1669, 0.1669, 0.1669, 0.1669, 0.1669,\n",
-       "           0.1669, 0.1669]],\n",
-       " \n",
-       "         [[0.1644, 0.1644, 0.1644, 0.1644, 0.1644, 0.1644, 0.1644, 0.1644,\n",
-       "           0.1644, 0.1644],\n",
-       "          [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667,\n",
-       "           0.1667, 0.1667],\n",
-       "          [0.1666, 0.1666, 0.1666, 0.1666, 0.1666, 0.1666, 0.1666, 0.1666,\n",
-       "           0.1666, 0.1666],\n",
-       "          [0.1679, 0.1679, 0.1679, 0.1679, 0.1679, 0.1679, 0.1679, 0.1679,\n",
-       "           0.1679, 0.1679],\n",
-       "          [0.1678, 0.1678, 0.1678, 0.1678, 0.1678, 0.1678, 0.1678, 0.1678,\n",
-       "           0.1678, 0.1678],\n",
-       "          [0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665, 0.1665,\n",
-       "           0.1665, 0.1665]]], device='cuda:0', grad_fn=<StackBackward>),\n",
-       " tensor([[0.2386, 0.2453, 0.2349, 0.2483, 0.2402, 0.2359],\n",
-       "         [0.2547, 0.2537, 0.2412, 0.2421, 0.2405, 0.2473],\n",
-       "         [0.2366, 0.2459, 0.2416, 0.2497, 0.2540, 0.2670]], device='cuda:0',\n",
-       "        grad_fn=<AsStridedBackward>))"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = Seq2Seq_Coverage(10, 12, 9, 8, Attention=Attention_Concat)\n",
-    "s.cuda()\n",
-    "input = torch.cuda.LongTensor(np.random.randint(0, 10, (3, 6)))\n",
-    "target = torch.cuda.LongTensor(np.random.randint(0, 12, (3, 10)))\n",
-    "\n",
-    "# without teacher forcing\n",
-    "s(input)\n",
-    "\n",
-    "# with teacher forcing\n",
-    "s(input, target)[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attn_weights = s(input, target)[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[1.6771, 1.6853, 1.6735, 1.6616, 1.6501, 1.6523],\n",
-       "        [1.6756, 1.6592, 1.6739, 1.6866, 1.6606, 1.6441],\n",
-       "        [1.6820, 1.6905, 1.6769, 1.6618, 1.6472, 1.6416]], device='cuda:0',\n",
-       "       grad_fn=<SumBackward2>)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.sum(attn_weights, dim=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[0.1677, 0.1677, 0.1677, 0.1677, 0.1677, 0.1677, 0.1677, 0.1677,\n",
-       "          0.1677, 0.1677],\n",
-       "         [0.1685, 0.1685, 0.1685, 0.1685, 0.1685, 0.1685, 0.1685, 0.1685,\n",
-       "          0.1685, 0.1685],\n",
-       "         [0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674,\n",
-       "          0.1674, 0.1674],\n",
-       "         [0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662,\n",
-       "          0.1662, 0.1662],\n",
-       "         [0.1650, 0.1650, 0.1650, 0.1650, 0.1650, 0.1650, 0.1650, 0.1650,\n",
-       "          0.1650, 0.1650],\n",
-       "         [0.1652, 0.1652, 0.1652, 0.1652, 0.1652, 0.1652, 0.1652, 0.1652,\n",
-       "          0.1652, 0.1652]],\n",
-       "\n",
-       "        [[0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1676, 0.1675, 0.1675,\n",
-       "          0.1676, 0.1674],\n",
-       "         [0.1660, 0.1660, 0.1660, 0.1660, 0.1660, 0.1660, 0.1659, 0.1659,\n",
-       "          0.1659, 0.1658],\n",
-       "         [0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1674, 0.1673, 0.1673,\n",
-       "          0.1674, 0.1672],\n",
-       "         [0.1687, 0.1687, 0.1687, 0.1687, 0.1687, 0.1687, 0.1686, 0.1686,\n",
-       "          0.1687, 0.1685],\n",
-       "         [0.1661, 0.1661, 0.1661, 0.1661, 0.1661, 0.1661, 0.1660, 0.1660,\n",
-       "          0.1661, 0.1659],\n",
-       "         [0.1642, 0.1642, 0.1642, 0.1642, 0.1642, 0.1642, 0.1647, 0.1646,\n",
-       "          0.1644, 0.1651]],\n",
-       "\n",
-       "        [[0.1682, 0.1682, 0.1682, 0.1682, 0.1682, 0.1682, 0.1682, 0.1682,\n",
-       "          0.1682, 0.1681],\n",
-       "         [0.1691, 0.1691, 0.1691, 0.1690, 0.1690, 0.1691, 0.1690, 0.1690,\n",
-       "          0.1690, 0.1690],\n",
-       "         [0.1677, 0.1677, 0.1677, 0.1677, 0.1677, 0.1677, 0.1677, 0.1677,\n",
-       "          0.1677, 0.1676],\n",
-       "         [0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662, 0.1662,\n",
-       "          0.1662, 0.1661],\n",
-       "         [0.1648, 0.1648, 0.1648, 0.1647, 0.1647, 0.1648, 0.1647, 0.1647,\n",
-       "          0.1647, 0.1647],\n",
-       "         [0.1640, 0.1640, 0.1640, 0.1643, 0.1642, 0.1640, 0.1642, 0.1643,\n",
-       "          0.1642, 0.1644]]], device='cuda:0', grad_fn=<StackBackward>)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "attn_weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
