coverage error func

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -194,7 +194,9 @@
    "source": [
     "def train(model, dataset, coverage=False, coverage_type=\"linguistic\", iterations=1, use_teacher_forcing=True, log=True):\n",
     "    # TODO: attention error\n",
-    "    loss = nn.NLLLoss()\n",
+    "    loss_func = nn.NLLLoss()\n",
+    "    attn_loss_func = nn.MSELoss()\n",
+    "    \n",
     "    optimizer = optim.Adagrad(model.parameters())\n",
     "    \n",
     "    for i in range(iterations):\n",
@@ -221,17 +223,22 @@
     "                target_output = target_output * target_mask.long()\n",
     "            else:\n",
     "                pred, attn_weights = model(source)\n",
-    "\n",
-    "            if coverage:\n",
-    "                # if coverage type is linguistic, ignore fertility\n",
-    "                attn_weights, fertility = attn\n",
-    "                raise NotImplementedError\n",
-    "\n",
+    "                \n",
     "            no_words = pred.shape[0] * pred.shape[1]\n",
     "            pred = pred.reshape(no_words, -1)\n",
     "            target_output = target_output.reshape(no_words)\n",
     "\n",
-    "            pred_error = loss(pred, target_output)\n",
+    "            pred_error = loss_func(pred, target_output)\n",
+    "            attn_error = None\n",
+    "            \n",
+    "            if coverage:\n",
+    "                # if coverage type is linguistic, ignore fertility\n",
+    "                attn_weights, fertility = attn\n",
+    "                if coverage_type == \"linguistic\":\n",
+    "                    fertility = torch.ones(fertility.shape).cuda()\n",
+    "                attn_error = attn_loss_func(torch.sum(attn_weights, dim=-1) * source_mask, fertility * source_mask)\n",
+    "                pred_error += attn_error\n",
+    "                \n",
     "            pred_error.backward()\n",
     "            optimizer.step()\n",
     "            \n",
