results on eng -> tamil sample data

--- a/train_and_test.ipynb
+++ b/train_and_test.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "def train_and_save(m, d, str_, coverage=False, coverage_type=\"linguistic\", log=False):\n",
     "    prev_score = -1\n",
-    "    for i in range(40):\n",
+    "    for i in range(30):\n",
     "        train(m, d, coverage, coverage_type, log=log)\n",
     "        score = eval(m, d)\n",
     "        best_state = None\n",
@@ -53,7 +53,7 @@
     "            best_state = m.state_dict()\n",
     "            prev_score = score\n",
     "            \n",
-    "    torch.save(best_state, str_ + str(prev_score)[:4] + \".params\")\n",
+    "    torch.save(best_state, str_ + str(prev_score)[:6] + \".params\")\n",
     "    print(prev_score)"
    ]
   },
@@ -131,7 +131,7 @@
     "            padding_dim_source=d.source_pad, padding_dim_target=d.target_pad, start_dim_target=d.target_start,\n",
     "            Attention=Attention_General)\n",
     "print(m.cuda())\n",
-    "train_and_save(m, d, \"coverage_attn_gen_\", True, \"linguistic\")"
+    "train_and_save(m, d, \"coverage_attn_gen_ling_\", True, \"linguistic\")"
    ]
   },
   {
@@ -145,7 +145,7 @@
     "            padding_dim_source=d.source_pad, padding_dim_target=d.target_pad, start_dim_target=d.target_start,\n",
     "            Attention=Attention_General)\n",
     "print(m.cuda())\n",
-    "train_and_save(m, d, \"coverage_attn_gen_\", True, \"fertility\")"
+    "train_and_save(m, d, \"coverage_attn_gen_fert_\", True, \"fertility\")"
    ]
   }
  ],
